--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-﻿<!DOCTYPE html> 
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="utf-8" />
     <title>Portfolio</title>
 </head>
+
 <body>
-   <h1> Ashish </h1>
+    <h1> Ashish </h1>
+    <h6> Thummar </h6>
 </body>
+
 </html>
