--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+    <img src="./images/Ashish.jpg" width="256">
     <h1> Ashish </h1>
     <h6> Thummar </h6>
 </body>
